[gd_scene load_steps=6 format=2]

[ext_resource path="res://Juego/Proyectiles/spaceMissiles.png" type="Texture" id=1]
[ext_resource path="res://Juego/Proyectiles/Misil.gd" type="Script" id=2]
[ext_resource path="res://Juego/Naves/Players/estela/Trail2D.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.15167, 28.2199 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.2977, 11.8884 )

[node name="MisilTest" type="RigidBody2D"]
collision_layer = 16
collision_mask = 9
gravity_scale = 0.0
contacts_reported = 2
contact_monitor = true
script = ExtResource( 2 )
potencia_actual = 100.0
estela_maxima = 100

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.4, 0.6 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Estela" type="Node2D" parent="."]

[node name="Trail2D" parent="Estela" instance=ExtResource( 3 )]
modulate = Color( 0.960784, 0.92549, 0.760784, 1 )
light_mask = 0
sharp_limit = 0.0
antialiased = true
resolution = 3.0
lifetime = 0.2
max_points = 50
target_path = NodePath("../../Sprite")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.707905, -0.235968 )
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_entered"]
